Add endpoint to get trainers for class
